--- a/_variables.scss
+++ b/_variables.scss
@@ -25,10 +25,17 @@ $font-size-h3:              ceil(($font-size-base * 1.7)) !default;
 $font-size-h4:              ceil(($font-size-base * 1.25)) !default;
 $font-size-h5:              $font-size-base !default;
 $font-size-h6:              ceil(($font-size-base * 0.85)) !default;
+$margin-h1:					30px !default!;
+$margin-h2:					20px !default;
+$margin-h3:					15px !default;
+$margin-h4:					10px !default;	
+$margin-h5:					5px !default;
+$margin-h6:					2px !default;
 $headings-font-family:      inherit !default;
 $headings-font-weight:      500 !default;   
 $headings-line-height:      1.1 !default;
 $headings-color:            inherit !default;
+
 
 //Scaffolding:
 
