--- a/_forms.scss
+++ b/_forms.scss
@@ -1,48 +1,31 @@
-$form-succes:  $succes-color;
-$form-danger:  $danger-color;
-$form-warning: $warning-color;
-$form-normal:  $normal-color;
-$input-color:   #434a54;
+//Mixin:
 
-@mixin form-size ($width, $bradius, $bord, $pad...) {
+@mixin form-size ($width, $border-radius, $border, $padding...) {
 	width: $width;
-	border-radius: $bradius;
-	border: $bord;
-	padding: $pad;
+	border-radius: $border-radius;
+	border: $border;
+	padding: $padding;
 }
-@mixin form-variant ($bcol, $color) {
-	border-color: $bcol;
+@mixin form-variant ($border-color, $color) {
+	border-color: $border-color;
 	color: $color;
 }
+
+//Forms:
+
 .form__group {
 	border: none;
 	.form__control {
-		@include form-size (100%, 4px, 1px solid $form-normal, 6px 12px);
+		@include form-size (100%, $input-border-radius, 1px solid $input-border, 6px 12px);
 		color: $input-color;
-
-	&--pill {
-		border-radius: $pill;
-	}
 	&--has-succes {
-		@include form-variant ($form-succes, $form-succes);
+		@include form-variant ($form-succes-color, $form-succes-color);
 	}
-	&--has-danger {
-		@include form-variant ($form-danger, $form-danger);
-	}
-	&--has-warning {
-		@include form-variant ($form-warning, $form-warning);
-	}
-	}
+}
 	.form__label {
 		font-weight: 400;
 		&--succes {
-			color: $form-succes;
-		}
-		&--danger {
-			color: $form-danger;
-		}
-		&--warning {
-			color: $form-warning;
+			color: $form-succes-color;
 		}
 	}
 
