--- a/_grid.scss
+++ b/_grid.scss
@@ -1,6 +1,12 @@
 $n: 12;
-@for $i from 1 through $n {
-	.column-#{$i} {
-		width: ($i * 100% / $n);
+$breakpoint-variant: (sm: 480px, md: 768px, lg: 980px);
+
+@each $var, $key in  $breakpoint-variant {
+	.#{$var} {
+		@for $i from 1 through $n {
+			.column-#{$i} {
+				width: ($i * 100% / $n);
+			}
+		}
 	}
 }
