--- a/_grid.scss
+++ b/_grid.scss
@@ -4,7 +4,7 @@ $breakpoint-variant: (sm: 480px, md: 768px, lg: 980px);
 @each $var, $key in  $breakpoint-variant {
 	.#{$var} {
 		@for $i from 1 through $n {
-			.column-#{$i} {
+			&-column-#{$i} {
 				width: ($i * 100% / $n);
 			}
 		}
