--- a/_grid.scss
+++ b/_grid.scss
@@ -2,10 +2,12 @@ $n: 12;
 $breakpoint-variant: (sm: 480px, md: 768px, lg: 980px);
 
 @each $var, $key in  $breakpoint-variant {
-	.#{$var} {
-		@for $i from 1 through $n {
-			&-column-#{$i} {
-				width: ($i * 100% / $n);
+	@media screen and (min-width: $key) {
+		.#{$var} {
+			@for $i from 1 through $n {
+				&-column-#{$i} {
+					width: ($i * 100% / $n);
+				}
 			}
 		}
 	}
