--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -21,15 +21,22 @@ a {
 		text-decoration: $link-hover-decoration;
 	}
 }
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6  {
 	color:$headings-color;
 	font-weight: $headings-font-weight;
 	line-height: $headings-line-height;
 	font-family: $headings-font-family;
 }
-h1{font-size: $font-size-h1; margin: $margin-h1;}
-h2{font-size: $font-size-h2; margin: $margin-h2;}
-h3{font-size: $font-size-h3; margin: $margin-h3;}
-h4{font-size: $font-size-h4; margin: $margin-h4;}
-h5{font-size: $font-size-h5; margin: $margin-h5;}
-h6{font-size: $font-size-h6; margin: $margin-h6;}
+h1, .h1{font-size: $font-size-h1; margin: $margin-h1;}
+h2, .h2{font-size: $font-size-h2; margin: $margin-h2;}
+h3, .h3{font-size: $font-size-h3; margin: $margin-h3;}
+h4, .h4{font-size: $font-size-h4; margin: $margin-h4;}
+h5, .h5{font-size: $font-size-h5; margin: $margin-h5;}
+h6, .h6{font-size: $font-size-h6; margin: $margin-h6;}
+
+.text-left     {text-align: left;}
+.text-right    {text-align: right;}
+.text-center   {text-align: center;}
+.text-justify  {text-align: justify;}
+.text-nowrap   {white-space: nowrap;}
