--- a/css/all.css
+++ b/css/all.css
@@ -192,41 +192,62 @@ a:hover {
   text-decoration: underline;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
   color: inherit;
   font-weight: 500;
   line-height: 1.1;
   font-family: inherit;
 }
 
-h1 {
+h1, .h1 {
   font-size: 36px;
   margin: 30px;
 }
 
-h2 {
+h2, .h2 {
   font-size: 30px;
   margin: 20px;
 }
 
-h3 {
+h3, .h3 {
   font-size: 24px;
   margin: 15px;
 }
 
-h4 {
+h4, .h4 {
   font-size: 18px;
   margin: 10px;
 }
 
-h5 {
+h5, .h5 {
   font-size: 14px;
   margin: 5px;
 }
 
-h6 {
+h6, .h6 {
   font-size: 12px;
   margin: 2px;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+.text-nowrap {
+  white-space: nowrap;
 }
 
 .btn {
@@ -234,8 +255,12 @@ h6 {
   display: inline-block;
   text-align: center;
   border: 1px solid transparent;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+  white-space: nowrap;
   border-radius: 0;
-  font-size: 16px;
+  font-size: 14px;
   padding: 10px 20px;
 }
 
@@ -248,6 +273,69 @@ h6 {
 .btn--primary:hover, .btn--primary.active {
   background: #91d2ea;
   border-color: #91d2ea;
+}
+
+.btn--success {
+  background-color: #5cb85c;
+  color: #000;
+  border-color: #5cb85c;
+}
+
+.btn--success:hover, .btn--success.active {
+  background: #a3d7a3;
+  border-color: #a3d7a3;
+}
+
+.btn--warning {
+  background-color: #f0ad4e;
+  color: #000;
+  border-color: #f0ad4e;
+}
+
+.btn--warning:hover, .btn--warning.active {
+  background: #f8d9ac;
+  border-color: #f8d9ac;
+}
+
+.btn--info {
+  background-color: #5bc0de;
+  color: #000;
+  border-color: #5bc0de;
+}
+
+.btn--info:hover, .btn--info.active {
+  background: #b0e1ef;
+  border-color: #b0e1ef;
+}
+
+.btn--danger {
+  background-color: #d9534f;
+  color: #000;
+  border-color: #d9534f;
+}
+
+.btn--danger:hover, .btn--danger.active {
+  background: #eba5a3;
+  border-color: #eba5a3;
+}
+
+.btn--large {
+  border-radius: 0;
+  font-size: 18px;
+  padding: 10px 16px;
+}
+
+.btn--small {
+  border-radius: 0;
+  font-size: 12px;
+  padding: 5px 10px;
+}
+
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  min-width: 0;
 }
 
 .form__group {
